Updated API key to remove Security Risk

--- a/notebooks/ExploDataAnalysis.ipynb
+++ b/notebooks/ExploDataAnalysis.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv('player_mvp_stats.csv')"
+    "df = pd.read_csv('../datafiles/player_mvp_stats.csv')"
    ]
   },
   {
