Updating EDA on NBA Analytics

--- a/notebooks/ExploDataAnalysis.ipynb
+++ b/notebooks/ExploDataAnalysis.ipynb
@@ -1,22 +1,81 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <div align=\"center\"> **NBA MVP Exploratory Data Analysis (1979-2023)** </div>\n",
+    "\n",
+    "<span style=\"color:lightblue\">\n",
+    "As a Data Analyst based in Canada, they have embarked on an extensive journey of Exploratory Data Analysis (EDA) concerning NBA MVP voting and statistics spanning from 1979 to 2023. This endeavor provides them with valuable insights into the performance and trends of basketball players over the years, despite the subject not being directly related to their profile.\n",
+    "</span>\n",
+    "<center><img src = \"1_waUUAUYAk78DNkswT-u3Aw.0.0.0.jpeg\"  style=\"height:300px\" /></center>\n",
+    "\n",
+    "\n",
+    "During this comprehensive analysis, they delve into various facets of MVP voting and player statistics. Several key points come to light during their EDA:\n",
+    "\n",
+    "* Player Performance Trends: The analysis focuses on how player statistics, including points per game, rebounds, assists, and shooting percentages, have evolved over the decades. They aim to discern any discernible trends or shifts in playing styles.\n",
+    "\n",
+    "* MVP Winners: Their investigation seeks to identify players who have clinched the MVP award multiple times during this extensive period. They scrutinize whether certain seasons or eras were dominated by particular players.\n",
+    "\n",
+    "* Team Success: The relationship between MVP winners and their team's success is scrutinized. The question arises whether MVP winners are commonly associated with championship-winning teams, or if there are instances of MVPs on teams with relatively lower performance.\n",
+    "\n",
+    "* Voting Patterns: The data analyst dives into changes in MVP voting patterns over the years. They are keen to uncover any shifts in the criteria considered by voters or alterations in the geographical distribution of votes.\n",
+    "\n",
+    "* Age and MVP: An examination of the age of MVP winners is conducted. They seek to determine if there are any trends concerning the age at which players tend to secure this prestigious award.\n",
+    "\n",
+    "* International Players: Given their Canadian background, they hold a particular interest in how international players have fared in MVP voting over the years. They aim to discern if there has been a growing recognition of international talent.\n",
+    "\n",
+    "* Statistical Correlations: Utilizing statistical techniques, they endeavor to identify correlations between various player statistics and MVP voting results. They aim to pinpoint which statistics exhibit the strongest associations with MVP wins.\n",
+    "\n",
+    "* Outliers and Anomalies: The data analyst diligently searches for any unusual or outlier seasons in terms of MVP voting or player statistics. They aim to uncover the factors that might explain these anomalies.\n",
+    "\n",
+    "In the process of conducting this analysis, they make effective use of data visualization techniques such as line graphs, scatter plots, and heatmaps to render their findings more accessible and engaging. Their approach to EDA goes beyond extracting insights; it also encompasses the skillful communication of their findings in a clear and concise manner."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
+    "df_players= pd.read_csv('../datafiles/player_mvp_stats.csv')\n",
     "\n",
-    "df = pd.read_csv('../datafiles/player_mvp_stats.csv')"
+    "df_teams = pd.read_csv('../datafiles/teams.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before performing any analysis on the extracted data, it is essential to identify different eras that were present in the NBA. It seems unfair to compare some of the players statistics as different rule changes have caused different playstyles, shot-making and defensive efforts. \n",
+    "\n",
+    "This analysis would consider the below-mentioned eras \n",
+    "\n",
+    "* 80s era - Dominated by the Showtime Lakers and the Larry Bird Celtics\n",
+    "* Early to mid-90s Bulls era - Dominated by Micheal Jordan's Chicago Bulls \n",
+    "* Late-90s to early 00s - Lakers and Spurs era\n",
+    "* Mid to late 00s - Dominated by Spurs, Lakers and Celtics\n",
+    "* 10s era dominated by Lebrons Teams and Golden State Warriors \n",
+    "* 20s era Current era"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
